@@ -34,6 +34,18 @@
 
     <build>
         <plugins>
+            <!-- Generates Javadoc HTML site -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.12.0</version>
+                <configuration>
+                    <source>25</source>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                    <detectJavaApiLink>false</detectJavaApiLink>
+                </configuration>
+            </plugin>
+
             <!-- Creates a fat JAR (with all dependencies bundled) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
